# substrate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml  main.yml
include/: array.h  buffer.h  memory.h
include/substrate/memory/: span.h
memory/: span.h
src/: buffer.c  memory.c
src/memory/: span.c
test/: CMakeLists.txt  memory.c  test_buffer.c
tests/: test_dummy.c  test_span.c
